@@ -35,6 +35,8 @@ Changes to Squid-2.4.DEVEL3 ():
 	  to be used.
 	- The CONNECT method now obeys miss_access requirements
 	- proxy_auth_regex and ident_regex ACL types
+	- Fixed a StoreEntry memory leak during "dirty" rebuild
+	- Helper processes no longer hold unrelated filedescriptors open
 
 Changes to Squid-2.4.DEVEL2 ():
 
